--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,11 @@ tr:hover {
   cursor: pointer;
 }
 
+.buttonCadastrar:hover{
+  background-color: #24542d;
+  border: 1px solid rgb(255, 255, 255);
+}
+
 .buttonLimpar{
   margin-top: 25px;
   margin-right: 0px;
@@ -110,6 +115,11 @@ tr:hover {
   cursor: pointer;
 }
 
+.buttonLimpar:hover{
+  background-color: #1a1739;
+  border: 1px solid rgb(255, 255, 255);
+}
+
 .irLista{
   border-radius: 10px;
   padding: 10px 9px;
@@ -120,6 +130,11 @@ tr:hover {
   text-decoration: none;
   background-color: darkslategrey;
   color: #fff;
+}
+
+.irLista:hover{
+  background-color: #58925d;
+  border: 1px solid rgb(0, 0, 0);
 }
 
 .titleLista{
@@ -150,6 +165,11 @@ tr:hover {
   margin-top: 0px;
   margin-bottom: 500px;
   bottom: 0px;
+}
+
+.irCadastro:hover{
+  background-color: #58925d;
+  border: 1px solid rgb(0, 0, 0);
 }
 
 .inicio{
@@ -184,7 +204,7 @@ tr:hover {
   font-size: 20px;
 }
 .menu{
-  width: 1519px;
+  width: 102.6%;
   justify-content: space-between;
   margin: auto;
   background-color: lightslategray;
@@ -195,7 +215,7 @@ tr:hover {
 
 .separador{
   background-color: lightslategray;
-  width: 1519px;
+  width: 102.6%;
   height: 3px;
   margin-left: -20px;
   margin-top: 90px;
@@ -209,7 +229,7 @@ tr:hover {
   padding: 5px;
   font-size: 13px;
   height: 55px;
-  width: 1508px;
+  width: 102%;
   margin-left: -20px;
   margin-bottom: -50px;
   margin-top: 150px;
@@ -223,40 +243,12 @@ tr:hover {
   flex-direction: column;
   justify-content: center;
 }
+
 .creditos{
   background-color: black;
   color: #ffffff;
   font-size: 15px;
 }
-
-.rodape2 {
-  background-color: black;
-  color: #fff;
-  display: flex;
-  justify-content: space-around;
-  padding: 5px;
-  font-size: 13px;
-  height: 55px;
-  width: 1526px;
-  margin-left: -20px;
-  position: fixed;
-  margin-top: 225px;
-}
-
-.creditos2{
-  background-color: black;
-  color: #ffffff;
-  font-size: 15px;
-}
-.menu2{
-  width: 1536px;
-  justify-content: space-between;
-  margin: auto;
-  background-color: lightslategray;
-  height: 50px;
-  margin-top: -20px;
-  margin-left: -20px;
-}  
 
 .button{
   margin-top: 100px;
@@ -275,4 +267,37 @@ tr:hover {
   text-decoration: none;
   background-color: #5148c7;
   color: #ddd;
+}
+
+@media screen and (max-width: 600px) {
+  .titleCadastro,
+  .titleLista {
+    margin-left: 20px;
+    margin-right: 20px;
+    width: auto;
+  }
+
+  .formCadastro,
+  .listaTable {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .buttonCadastrar,
+  .buttonLimpar,
+  .irLista,
+  .irCadastro {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
+  .rodape,
+  .menu {
+    width: 600px;
+  }
+
+  .duplaInicio{
+    margin-left: 0px;
+    margin-top: 0px;
+  }
 }
