--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ tr:hover {
   font-size: 20px;
 }
 .menu{
-  width: 102.6%;
+  width: 102.7%;
   justify-content: space-between;
   margin: auto;
   background-color: lightslategray;
@@ -258,13 +258,14 @@ tr:hover {
   background-color: #5148c7;
   color: white;
   border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
   text-decoration: none;
 }
 
 .botao{
   text-decoration: none;
+  font-size: 15px;
   background-color: #5148c7;
   color: #ddd;
 }
