--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ tr:hover {
 .irCadastro{
   border-radius: 10px;
   padding: 10px 9px;
-  margin-left: 1200px;
+  margin-left: 150px;
   text-decoration: none;
   background-color: darkslategrey;
   color: #fff;
@@ -315,18 +315,32 @@ tr:hover {
   background-color: #555;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .titleCadastro,
   .titleLista {
     margin-left: 20px;
     margin-right: 20px;
     width: auto;
   }
-
-  .formCadastro,
+  .titleInicio{
+    margin-left: -25px;
+    width: 510px;
+  }
+  .formCadastro {
+    margin-left: 120px;
+    margin-right: 0px;
+  }
   .listaTable {
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 0px;
+  }
+
+  .inicio {
+    width: 700px;
+  }
+
+  .button{
+    margin-left: 20px;
   }
 
   .buttonCadastrar,
@@ -339,11 +353,14 @@ tr:hover {
   
   .rodape,
   .menu {
-    width: 600px;
+    width: 790px;
   }
 
   .duplaInicio{
-    margin-left: 0px;
+    margin-left: 300px;
     margin-top: 0px;
+  }
+  .nomesInicio{
+    margin-left: 300px;
   }
 }
