--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Estilo geral */
 *{
   background-color: #d6d6d6;  
 }
@@ -16,6 +17,25 @@ label {
   width: 150px;
 }
 
+/* Estilo Menu fixo */
+.titleMenu{
+  background-color: lightslategray;
+  color: white;
+  margin-left: 80px;
+  padding-top: 13px;
+  font-size: 20px;
+}
+.menu{
+  width: 102.7%;
+  justify-content: space-between;
+  margin: auto;
+  background-color: lightslategray;
+  height: 50px;
+  margin-top: -20px;
+  margin-left: -20px;
+}  
+
+/* Estilo tabela */
 input[type="text"],
 input[type="number"],
 select {
@@ -62,6 +82,63 @@ tr:hover {
   color: #999;
 }
 
+/* Estilo  área inicial - Página: Cadastro de produto */
+.inicio{
+  margin-left: -20px;
+  font-size: 30px;
+  background-color: #7f8380;
+  justify-content: space-between;
+  align-items: center;
+  width: 95.9%;
+  height: 60vh;
+  padding: 77px 50px 0 50px;
+  background: linear-gradient(146deg, rgb(112, 168, 219) 50%, rgb(182, 182, 182) 50%);
+}
+
+.titleInicio{
+  color: #000000;
+  text-shadow: rgb(226, 226, 226) 2.5px 2.5px;
+  background-color: rgb(112, 168, 219);
+  margin-left: 200px;
+  width: 550px;
+}
+
+.button{
+  margin-top: 100px;
+  margin-left: 250px;
+  width: 170px;
+  height: 40px;
+  background-color: #5148c7;
+  color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.botao{
+  text-decoration: none;
+  font-size: 15px;
+  background-color: #5148c7;
+  color: #ddd;
+}
+
+.duplaInicio{
+  color: #202020;
+  text-shadow: rgb(255, 255, 255) 2.5px 2.5px;
+  background-color: rgb(182, 182, 182);
+  margin-left: 900px;
+  margin-top: -65px;
+}
+
+.nomesInicio{
+  margin-left: 950px;
+  font-size: 27px;
+  margin-bottom: 200px;
+  background-color: rgb(182, 182, 182);
+}
+
+/* Estilo área formulário - Página: Cadastro de produto */
 .titleCadastro{
   text-align: center;
   align-items: center;
@@ -150,91 +227,7 @@ tr:hover {
   color: #fff;
 }
 
-.listaTable{
-  margin-bottom: 50px;
-  margin-left: 150px;
-  width: 80%;
-  text-align: center;
-}
-
-.irCadastro{
-  border-radius: 10px;
-  padding: 10px 9px;
-  margin-left: 150px;
-  text-decoration: none;
-  background-color: darkslategrey;
-  color: #fff;
-  border-radius: 10px;
-  margin-top: 0px;
-  margin-bottom: 500px;
-  bottom: 0px;
-}
-
-.irCadastro:hover{
-  background-color: #58925d;
-  border: 1px solid rgb(0, 0, 0);
-}
-
-.inicio{
-  margin-left: -20px;
-  font-size: 30px;
-  background-color: #7f8380;
-  justify-content: space-between;
-  align-items: center;
-  width: 95.9%;
-  height: 60vh;
-  padding: 77px 50px 0 50px;
-  background: linear-gradient(146deg, rgb(112, 168, 219) 50%, rgb(182, 182, 182) 50%);
-}
-
-.titleInicio{
-  color: #000000;
-  text-shadow: rgb(226, 226, 226) 2.5px 2.5px;
-  background-color: rgb(112, 168, 219);
-  margin-left: 200px;
-  width: 550px;
-}
-
-.duplaInicio{
-  color: #202020;
-  text-shadow: rgb(255, 255, 255) 2.5px 2.5px;
-  background-color: rgb(182, 182, 182);
-  margin-left: 900px;
-  margin-top: -65px;
-}
-
-.nomesInicio{
-  margin-left: 950px;
-  font-size: 27px;
-  margin-bottom: 200px;
-  background-color: rgb(182, 182, 182);
-}
-
-.titleMenu{
-  background-color: lightslategray;
-  color: white;
-  margin-left: 80px;
-  padding-top: 13px;
-  font-size: 20px;
-}
-.menu{
-  width: 102.7%;
-  justify-content: space-between;
-  margin: auto;
-  background-color: lightslategray;
-  height: 50px;
-  margin-top: -20px;
-  margin-left: -20px;
-}  
-
-.separador{
-  background-color: lightslategray;
-  width: 102.6%;
-  height: 3px;
-  margin-left: -20px;
-  margin-top: 90px;
-}
-
+/* Estilo Footer - Página: Cadastro de produto */
 .rodape {
   background-color: black;
   color: #fff;
@@ -264,28 +257,12 @@ tr:hover {
   font-size: 15px;
 }
 
-.button{
-  margin-top: 100px;
-  margin-left: 250px;
-  width: 170px;
-  height: 40px;
-  background-color: #5148c7;
-  color: white;
-  border: 1px solid black;
-  border-radius: 10px;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.botao{
-  text-decoration: none;
-  font-size: 15px;
-  background-color: #5148c7;
-  color: #ddd;
-}
-
-.strikethrough {
-  text-decoration: line-through;
+/* Estilo Tabela - Página: Lista */
+.listaTable{
+  margin-bottom: 50px;
+  margin-left: 150px;
+  width: 80%;
+  text-align: center;
 }
 
 .editing input {
@@ -315,6 +292,43 @@ tr:hover {
   background-color: #555;
 }
 
+/* Estilo Botões - Página: Lista */
+.buttonEnviarDados{
+  background-color: #4c9baf;
+  border-radius: 10px;
+  padding: 10px 9px;
+  margin-left: 20px;
+  text-decoration: none;
+  background-color: rgb(6, 60, 161);
+  color: #fff;
+  border-radius: 10px;
+  margin-top: 0px;
+  bottom: 0px;
+}
+
+.buttonEnviarDados:hover{
+  background-color: rgb(0, 146, 190);
+}
+
+.irCadastro{
+  border-radius: 10px;
+  padding: 10px 9px;
+  margin-left: 150px;
+  text-decoration: none;
+  background-color: darkslategrey;
+  color: #fff;
+  border-radius: 10px;
+  margin-top: 0px;
+  margin-bottom: 500px;
+  bottom: 0px;
+}
+
+.irCadastro:hover{
+  background-color: #58925d;
+  border: 1px solid rgb(0, 0, 0);
+}
+
+/* Responsividade */
 @media screen and (max-width: 800px) {
   .titleCadastro,
   .titleLista {
